Casi terminado, falla bus
No entiendo por qué no lo reconoce pero bueno

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,5 @@ add_executable(visitante
         include/equipo.cpp
         include/main.cpp
         include/tarjeta.cpp
-        include/visitanteEquipo.cpp
         include/visitantePrecio.cpp
-        include/visitantePrecioDetalle.cpp)
+        include/visitantePrecioDetalle.cpp include/cliente.h)
