Mira estoy harta

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,19 +6,17 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(include)
 
 add_executable(visitante
-        include/bus.hpp
-        include/componenteEquipo.hpp
-        include/disco.hpp
-        include/equipo.hpp
-        include/tarjeta.hpp
-        include/visitanteEquipo.hpp
-        include/visitantePrecio.hpp
-        include/visitantePrecioDetalle.hpp
-        include/bus.cpp
+        include/componenteEquipo.h
+        include/disco.h
+        include/equipo.h
+        include/tarjeta.h
+        include/visitanteEquipo.h
+        include/visitantePrecio.h
+        include/visitantePrecioDetalle.h
         include/componenteEquipo.cpp
         include/disco.cpp
         include/equipo.cpp
         include/main.cpp
         include/tarjeta.cpp
         include/visitantePrecio.cpp
-        include/visitantePrecioDetalle.cpp include/cliente.h)
+        include/visitantePrecioDetalle.cpp include/cliente.h include/bus.cpp include/bus.h)
